new project added

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             My official education is the <em>Bachelor of Business Economics.</em>
             <p>With a passion for both personal growth and for software development, when I'm not at work, I spend my free time studying, exploring, and building. Experience has taught me to take accessibility and responsiveness seriously.
               Although I find everything about programming interesting, web development is my passion and I love working in Front End area.
-              My experience mostly spans the JavaScript ecosystem: <strong>JavaScript, TypeScript, React, Node.js. </strong>I'm seeking for improvement in everything I do. Often a bit uncomfortable, but always going out of my comfort zone.
+              My experience mostly spans the JavaScript ecosystem: <strong>JavaScript, TypeScript, React, NextJS, NodeJS. </strong>I'm seeking for improvement in everything I do. Often a bit uncomfortable, but always going out of my comfort zone.
               As I'm curious person, I enjoy watching all sorts of movies, tv shows, documentaries. When I'm not working and developing, I'm hitting the gym! Doing work out, and sports generally, brings me positive energy.  </p>
               
           </p>
@@ -91,6 +91,22 @@
           <h1 class="section-title">Recent <span>Projects</span></h1>
         </div>
         <div class="all-projects">
+          <div class="project-item">
+            <div class="project-info">
+              <h1>ZenMomentun - Personal Blog - NextJS</h1>
+              <a href="https://zen-momentum.vercel.app" type="button"
+                >https://zen-momentum.vercel.app</a
+              >
+              <p>
+                <strong>My personal blog where I post mostly about personal growth and everything that could help you in your personal development. It was made in NextJS, GraphQL as query language, GraphCMS as content management system and Tailwind CSS. </strong>
+              </p>
+              <a
+                href="https://github.com/almdnn/ZenMomentum---Personal-Blog-NextJS"
+                type="button"
+                >https://github.com/almdnn/ZenMomentum---Personal-Blog-NextJS</a
+              >
+            </div>
+          </div>
           <div class="project-item">
             <div class="project-info">
               <h1>VINTAGELAND eCommerce platform</h1>
@@ -140,22 +156,7 @@
             </div>
           </div>
 
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Food Delivery</h1>
-              <a href="https://deliveryfood-61b35.web.app/" type="button"
-                >https://deliveryfood-61b35.web.app/</a
-              >
-              <p>
-                <strong>Food delivery app, firebase used as backend. </strong>
-              </p>
-              <a
-                href="https://github.com/almdnn/Food-Delivery-App----React-App"
-                type="button"
-                >https://github.com/almdnn/Food-Delivery-App----React-App</a
-              >
-            </div>
-          </div>
+         
         </div>
       </div>
     </section>
